anthonykimani.tfhe_voting_system.5a21a93088d07d39f71f5cbc4f621449d4c84dc6
Running as unit: run-p1521037-i14101145.scope; invocation ID: 7dd62342d3964e44b28af988eec80dfb
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.12
   Compiling libc v0.2.155
   Compiling autocfg v1.3.0
    Checking cfg-if v1.0.0
   Compiling version_check v0.9.5
   Compiling serde v1.0.205
   Compiling typenum v1.17.0
    Checking pin-project-lite v0.2.14
   Compiling generic-array v0.14.7
   Compiling num-traits v0.2.19
    Checking itoa v1.0.11
   Compiling lock_api v0.4.12
   Compiling parking_lot_core v0.9.10
   Compiling quote v1.0.36
   Compiling jobserver v0.1.32
    Checking log v0.4.22
    Checking bytes v1.7.1
    Checking getrandom v0.2.15
   Compiling syn v2.0.72
   Compiling cc v1.1.8
    Checking smallvec v1.13.2
    Checking futures-core v0.3.30
    Checking byteorder v1.5.0
    Checking scopeguard v1.2.0
    Checking memchr v2.7.4
    Checking once_cell v1.19.0
    Checking parking_lot v0.12.3
    Checking mio v1.0.1
    Checking signal-hook-registry v1.4.2
    Checking socket2 v0.5.7
   Compiling pkg-config v0.3.30
    Checking tracing-core v0.1.32
    Checking tokio v1.39.2
    Checking crypto-common v0.1.6
   Compiling slab v0.4.9
   Compiling paste v1.0.15
   Compiling crossbeam-utils v0.8.20
    Checking tracing v0.1.40
    Checking block-buffer v0.10.4
    Checking futures-sink v0.3.30
    Checking powerfmt v0.2.0
   Compiling zstd-sys v2.0.13+zstd.1.5.6
    Checking percent-encoding v2.3.1
   Compiling time-core v0.1.2
    Checking bytemuck v1.16.3
    Checking cpufeatures v0.2.12
   Compiling num-conv v0.1.0
   Compiling time-macros v0.2.18
    Checking deranged v0.3.11
    Checking digest v0.10.7
    Checking inout v0.1.3
    Checking rand_core v0.6.4
    Checking local-waker v0.1.4
   Compiling fnv v1.0.7
   Compiling strsim v0.11.1
    Checking base64 v0.22.1
    Checking futures-task v0.3.30
    Checking alloc-no-stdlib v2.0.4
   Compiling libm v0.2.8
    Checking pin-utils v0.1.0
   Compiling ident_case v1.0.1
   Compiling zstd-safe v7.2.1
    Checking tinyvec_macros v0.1.1
    Checking tinyvec v1.8.0
    Checking time v0.3.36
    Checking http v0.2.12
    Checking futures-util v0.3.30
    Checking alloc-stdlib v0.2.2
    Checking cipher v0.4.4
    Checking crossbeam-epoch v0.9.18
    Checking aho-corasick v1.1.3
   Compiling ahash v0.8.11
   Compiling darling_core v0.20.10
    Checking tokio-util v0.7.11
    Checking bitflags v2.6.0
    Checking equivalent v1.0.1
   Compiling rayon-core v1.12.1
    Checking reborrow v0.5.5
    Checking regex-syntax v0.8.4
   Compiling serde_json v1.0.122
    Checking ryu v1.0.18
    Checking hashbrown v0.14.5
   Compiling httparse v1.9.4
   Compiling serde_derive v1.0.205
   Compiling zerocopy-derive v0.7.35
    Checking adler v1.0.2
    Checking miniz_oxide v0.7.4
    Checking zerocopy v0.7.35
    Checking regex-automata v0.4.7
   Compiling darling_macro v0.20.10
    Checking indexmap v2.3.0
   Compiling bytestring v1.3.1
    Checking actix-rt v2.10.0
    Checking ppv-lite86 v0.2.20
    Checking crossbeam-deque v0.8.5
    Checking brotli-decompressor v4.0.1
    Checking rand_chacha v0.3.1
    Checking unicode-normalization v0.1.23
    Checking actix-utils v3.0.1
    Checking actix-service v2.0.2
    Checking form_urlencoded v1.2.1
   Compiling cookie v0.16.2
    Checking crc32fast v1.4.2
    Checking either v1.13.0
   Compiling convert_case v0.4.0
   Compiling thiserror v1.0.63
    Checking unicode-bidi v0.3.15
   Compiling regex-lite v0.1.6
   Compiling derive_more v0.99.18
    Checking idna v0.5.0
    Checking flate2 v1.0.31
    Checking regex v1.10.6
    Checking brotli v6.0.0
    Checking rand v0.8.5
   Compiling actix-router v0.5.3
    Checking h2 v0.3.26
    Checking num-complex v0.4.6
    Checking aligned-vec v0.5.0
   Compiling darling v0.20.10
   Compiling thiserror-impl v1.0.63
    Checking pulp v0.18.21
    Checking actix-codec v0.5.2
    Checking local-channel v0.1.5
    Checking sha1 v0.10.6
   Compiling ring v0.17.8
    Checking num-integer v0.1.46
    Checking encoding_rs v0.8.34
    Checking language-tags v0.3.2
    Checking httpdate v1.0.3
   Compiling heck v0.5.0
   Compiling pq-sys v0.6.1
   Compiling concrete-csprng v0.4.1
    Checking mime v0.3.17
   Compiling dsl_auto_type v0.1.2
    Checking num-bigint v0.4.6
    Checking serde_urlencoded v0.7.1
   Compiling actix-web-codegen v4.3.0
    Checking rayon v1.10.0
    Checking url v2.5.2
    Checking actix-server v2.5.0
   Compiling actix-macros v0.2.4
   Compiling tfhe-versionable-derive v0.2.1
    Checking dyn-stack v0.9.1
   Compiling diesel_table_macro_syntax v0.2.0
    Checking aes v0.8.4
    Checking keccak v0.1.5
   Compiling tfhe v0.7.2
    Checking iana-time-zone v0.1.60
    Checking spin v0.9.8
    Checking untrusted v0.9.0
    Checking impl-more v0.1.6
    Checking chrono v0.4.38
    Checking sha3 v0.10.8
   Compiling diesel_derives v2.2.2
    Checking tfhe-versionable v0.2.1
    Checking concrete-fft v0.4.1
    Checking simple_asn1 v0.6.2
    Checking concrete-ntt v0.1.2
    Checking bincode v1.3.3
    Checking itertools v0.11.0
    Checking blowfish v0.9.1
    Checking pem v3.0.4
    Checking zeroize v1.8.1
    Checking subtle v2.6.1
    Checking base64 v0.21.7
    Checking bcrypt v0.15.1
    Checking dotenv v0.15.0
    Checking dotenvy v0.15.7
    Checking diesel v2.2.2
    Checking jsonwebtoken v9.3.0
    Checking zstd v0.13.2
    Checking actix-http v3.9.0
    Checking actix-web v4.9.0
    Checking actix-cors v0.7.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.2/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
